my own heroku try

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Portfolio.html</title>
+		<!-- <link rel="stylesheet" type="text/css" href="../../../class_contents/class4_2.7.17/4-ResetCSS/reset.css"> -->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 
